using System.Collections.Generic;

namespace industrialization.Server.PacketHandle.PacketResponse
{
    public static class InventoryContentResponseProtocol
    {
        public static List<byte[]> GetResponse(byte[] payload)
        {
            throw new System.NotImplementedException();
        }
    }
}