using industrialization.OverallManagement.DataStore;

namespace industrialization.Server.Player
{
    public class PlayerCoordinateToDoResponse
    {
        public bool DoResponse(Coordinate coordinate)
        {
            //TODO ここに座標取得処理を作成
            return false;
        }
    }
}